# CAP-prac1

./: .gitignore  CMakeLists.txt  README.md  asan_ignore.txt  clustered_data  dataReader  dataReader.cpp  generateClustersRngSeeds.cpp  generateDebugSeeds copy.cpp  generateRndSeeds  generateRndSeeds.cpp  generateUniformRngSeeds.cpp  kClustering  kClustering.cpp  kmeansDataVis copy.ipynb  kmeansDataVis.ipynb  kmeansDataVis.py  kmeansDataVis_v1.ipynb  kmeansDataVis_v2.ipynb  multirun.sh  omp_dist.csv  process_LOG_csv.ipynb  salida  test_ompi_omp.cpp  test_openmp.cpp
Docs/csv/100D_5kP_8C/: omp_dist.csv  sglthd_dist.csv  sglthd_dist_stats.csv
Docs/csv/1kD_5kP_8C/: omp_dist.csv  sglthd_dist.csv
Docs/csv/3D_5kP_8C/: omp_dist.csv  omp_dist_stat.csv  sglthd_dist.csv  sglthd_dist_stats.csv
Docs/img/csv/n_cluster-opt/: omp_dist_100D_50kP_10C.csv  omp_dist_3D_10kP_10C.csv  omp_dist_3D_10kP_200C.csv  snglthrd_dist_100D_50kP_10C.csv  snglthrd_dist_3D_10kP_10C.csv  snglthrd_dist_3D_10kP_200C.csv
csvs/: new_centroid.csv  new_centroid2.csv  old_centroid.csv
include/: CentroidDiffRef.hpp  CentroidDiffs.hpp  Centroids.hpp  Cluster.hpp  Point.hpp  PointData.hpp  PointRef.hpp  bin_utils.hpp  log_utils.hpp  structs.hpp  v_ops.hpp
src/: Cluster.cpp  Point.cpp  bin_utils.cpp  fixlinktest.cpp  kClustering.cpp  structs.cpp
